--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,23 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "annotated-types==0.7.0",
+    "anyio==4.10.0",
+    "click==8.2.1",
+    "dnspython==2.7.0",
     "dotenv>=0.9.9",
-    "fastapi>=0.121.1",
+    "fastapi==0.116.1",
+    "h11==0.16.0",
+    "httpx==0.27.2",
+    "idna==3.10",
+    "mysql-connector-python==9.0.0",
+    "pydantic==2.11.7",
+    "pydantic-core==2.33.2",
+    "pytest==8.3.3",
+    "python-dotenv==1.0.1",
+    "sniffio==1.3.1",
+    "starlette==0.47.3",
+    "typing-extensions==4.15.0",
+    "typing-inspection==0.4.1",
+    "uvicorn[standard]==0.35.0",
 ]
