--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,18 +8,22 @@ dependencies = [
     "annotated-types==0.7.0",
     "anyio==4.10.0",
     "click==8.2.1",
+    "cloud-sql-python-connector>=1.18.5",
     "dnspython==2.7.0",
     "dotenv>=0.9.9",
     "fastapi==0.116.1",
+    "google>=3.0.0",
     "h11==0.16.0",
     "httpx==0.27.2",
     "idna==3.10",
     "mysql-connector-python==9.0.0",
     "pydantic==2.11.7",
     "pydantic-core==2.33.2",
+    "pymysql>=1.1.2",
     "pytest==8.3.3",
     "python-dotenv==1.0.1",
     "sniffio==1.3.1",
+    "sqlalchemy>=2.0.44",
     "starlette==0.47.3",
     "typing-extensions==4.15.0",
     "typing-inspection==0.4.1",
