Implement HATEOAS microservices with SERVICE_BASE_URL inheritance

--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,14 @@ DB_NAME=matches
 PRIVATE_IP=false
 
 # Service URLs for HATEOAS and inter-service communication
+# If all services are deployed at the same URL (monolith mode), set only SERVICE_BASE_URL
 SERVICE_BASE_URL=http://localhost:8000
-POOL_SERVICE_URL=http://localhost:8000
-MATCH_SERVICE_URL=http://localhost:8000
-DECISION_SERVICE_URL=http://localhost:8000
+
+# Optional: Override individual service URLs for true microservices deployment
+# If not set, they will inherit from SERVICE_BASE_URL
+# POOL_SERVICE_URL=http://pool-service:8001
+# MATCH_SERVICE_URL=http://match-service:8002
+# DECISION_SERVICE_URL=http://decision-service:8003
 
 # Optional: SQL query logging
 SQL_ECHO=false
