--- a/Dockerfile.decision
+++ b/Dockerfile.decision
@@ -6,8 +6,10 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy only necessary files for decision service
+# Copy frameworks (db models, session, hateoas)
 COPY frameworks/ ./frameworks/
+
+# Copy decision service files
 COPY decision/ ./decision/
 COPY decision_main.py .
 
