--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "fastapi==0.116.1",
     "google>=3.0.0",
+    "google-cloud-pubsub==2.18.4",
     "h11==0.16.0",
     "httpx==0.27.2",
     "idna==3.10",
