--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,9 @@ mysql-connector-python==9.0.0
 google-cloud-sql-python-connector==1.18.5
 google-auth==2.31.0
 
+# ---- Google Cloud ----
+google-cloud-pubsub==2.18.4
+
 # ---- Environment & Config ----
 python-dotenv==1.0.1
 
